# rssip

./: Cargo.toml  README.md
examples/: Cargo.toml  sipstateless.rs
rssip/: Cargo.toml
rssip-media/: Cargo.toml
rssip-media/src/: codec.rs  error.rs  lib.rs  media.rs
rssip-media/src/sdp/: mod.rs  negotiator.rs  parser.rs
rssip-sdp/: Cargo.toml
rssip-sdp/src/: error.rs  lib.rs  negotiator.rs
rssip-sdp/src/parser/: mod.rs
rssip-sip/: Cargo.toml
rssip-sip/src/: lib.rs
rssip-sip/src/transaction/: manager.rs  mod.rs
rssip-sip/src/transport/: incoming.rs
rssip-sip/src/ua/: mod.rs  session.rs
rssip-ua/: Cargo.toml
rssip-ua/src/: inv_session.rs  lib.rs  session.rs
rssip-utils/: Cargo.toml
rssip-utils/src/: lib.rs  scanner.rs
rssip-utils/src/scanner/: mod.rs  scanner_test.rs
rssip/src/: error.rs  lib.rs  macros.rs  message.rs  parser.rs  test_utils.rs  transport.rs  ua_layer.rs
rssip/src/core/: endpoint.rs  mod.rs  resolver.rs
rssip/src/dialog/: dialog.rs  mod.rs
rssip/src/endpoint/: builder.rs  mod.rs  plugin.rs
rssip/src/message/: media_type.rs  method.rs  mod.rs  param.rs  status_code.rs  uri.rs
rssip/src/parser/: mod.rs  parser_test.rs
rssip/src/session/: mod.rs  session_test.rs
rssip/src/transaction/: client.rs  fsm.rs  manager.rs  mod.rs  server.rs  timers.rs
rssip/src/transport/: decode.rs  incoming.rs  mod.rs  outgoing.rs  tcp.rs  udp.rs  ws.rs
rssip/src/ua/: dialog.rs  mod.rs  session.rs
rssip/src/ua_layer/: dialog.rs  (+3 more)
voip-sip/src/: lib.rs  test_utils.rs
voip-utils/: Cargo.toml
voip-utils/src/: lib.rs  scanner.rs
(+44 files in other folders)
