[workspace]
members = ["rssip-utils", "examples", "rssip-sdp", "rssip"]

resolver = "2"

[profile.dev]
opt-level = 0

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sdp = { path = "rssip-sdp", package = "rssip-sdp" }
utils = { path = "rssip-utils", package = "rssip-utils" }
tokio = { version = "1.41.1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "test-util",
] }
thiserror = "2.0.12"
bytes = "1"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"


[profile.release-with-debug]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
